src/test/ui/parser/keyword-in-as-identifier.stderr
error: expected pattern, found keyword `in`
  --> $DIR/keyword-in-as-identifier.rs:6:9
   |
LL |     let in = "foo"; //~ error: expected pattern, found keyword `in`
   |         ^^ expected pattern

error: aborting due to previous error

